<resources>
    <string name="app_name">RichFamily</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="hello_blank_fragment">Заглушка на первое время</string>

    <string name="name_hint_text">Имя</string>
    <string name="surname_hint_text">Фамилия</string>
    <string name="email_hint_text">Почта</string>
    <string name="password_hint_text">Пароль</string>
    <string name="submit_password_hint_text">Подтверждение пароля</string>
    <string name="secret_word_hint_text">Секретное слово</string>

    <string name="edit_button_label">Редактировать</string>
    <string name="exit_button_label">Выйти</string>
    <string name="add_operation_button_label">Сохранить</string>
    <string name="submit_button_label">Подтвердить</string>
    <string name="enter_button_label">Войти</string>

    <string name="operation_type_label">Тип операции</string>
    <string name="consumption_text">Расход</string>
    <string name="income_text">Доход</string>

    <string name="category_hint_text">Категория</string>
    <string name="total_hint_text">Сумма</string>
    <string name="comment_hint_text">Комментарий</string>
    <string name="sender_hint_text">Отправитель/Получатель</string>

    <string name="have_account_text">Уже есть аккаунт</string>
    <string name="forgot_password_text">Забыл пароль</string>

    <string name="categories_title">Категории</string>
    <string name="report_title">Отчет</string>
    <string name="credits_title">Кредиты</string>
    <string name="account_title">Аккаунт</string>
    <string name="group_title">Группа</string>
    <string name="about_title">О приложении</string>
    <string name="wallet_title">Счета</string>
    <string name="templates_title">Шаблоны</string>
    <string name="consumption_label">Расходы</string>
    <string name="income_label">Доходы</string>
    <string name="create_group_text">Создание новой группы</string>
    <string name="group_name_hint_text">Название группы</string>
    <string name="create_group_button_label">Создать группу</string>
    <string name="user_groups_label">Ваши группы:</string>
    <string name="invite_user_text">Добавить участника</string>
    <string name="invite_user_button_label">Пригласить</string>
    <string name="calculate_text">Калькулятор</string>
    <string name="credit_name_hint_text">Название кредита</string>
    <string name="percentage_hint_text">Процентная ставка</string>
    <string name="first_pay_hint_text">Первоначальный взнос</string>
    <string name="credit_total_hint_text">Сумма кредита</string>
    <string name="credit_term_hint_text">Срок кредита, в месяцах</string>
    <string name="month_text">месяцев</string>
    <string name="calculate_button_label">Рассчитать</string>
    <string name="monthly_payment_text">Ежемесячный платеж</string>
    <string name="continue_button_label">Продолжить</string>
    <string name="cost_and_percentage_text">Стоимость и проценты</string>
    <string name="interest_charges_text">Начисленные проценты</string>
    <string name="save_report_button_label">Сохранить отчет</string>
    <string name="add_category_text">Создание новой категории</string>
    <string name="category_name_hint_text">Название категории</string>
    <string name="add_category_button_label">Создать категорию</string>
    <string name="credit_name_text">Название кредита</string>
    <string name="start_sum_hint_text">Изначальная сумма</string>
    <string name="wallet_hint_text">Счет</string>
    <string name="wallet_title_hint_text">Название счета</string>
    <string name="category_name_tv">Название категории:</string>

    <string name="add">Добавить</string>
    <string name="cancel">Отмена</string>
    <string name="succesful_delete">Успешное удаление</string>
    <string name="error_delete">Ошибка при удалении</string>
    <string name="succesful_update">Успешное обновление</string>
    <string name="succesful_add">Успешне добавление</string>
    <string name="refresh_button_text">Обновить</string>
    <string name="connection_error_tv">Ошибка подключения</string>
    <string name="server_offline_text">Сервер недоступен</string>
    <string name="operation_text_tv">Операции</string>

    <string name="warning_text_tv">Unless required by applicable law or
        agreed to in writing, Licensor provides the Work (and each
        Contributor provides its Contributions) on an "AS IS" BASIS,
        WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or
        implied, including, without limitation, any warranties or conditions
        of TITLE, NON-INFRINGEMENT, MERCHANTABILITY, or FITNESS FOR A
        PARTICULAR PURPOSE.</string>
    <string name="accept">Подтвердить</string>
    <string name="period_text_tv">Период</string>
    <string name="rub_sign">₽</string>
    <string name="rub_text">Руб.</string>
    <string name="template_name_hint_et">Название шаблона</string>
    <string name="group_name_text">Название группы:</string>
    <string name="user_email_text">Email пользователя:</string>
    <string name="leave_group_button_label">Выйти из группы</string>
    <string name="delete_group_button_label">Удалить группу</string>
    <string name="lastname_label_tv">Фамилия</string>
    <string name="adressat_label_tv">Адресат</string>
    <string name="date_label_tv">Дата и время</string>
    <string name="time_hint_et">hh:mm</string>
    <string name="date_hint_et">dd/mm/yyyy</string>
    <string name="percent_sign_tv">%</string>
    <string name="participant_label_tv">Участники</string>
    <string name="role_label_tv">Роль</string>
    <string name="update_screen_button_label">Обновить</string>
    <string name="get_started_button_label">Начать</string>
    <string name="descr">descr</string>
    <string name="skip">Пропустить</string>
    <string name="new_pwd_et">Новый пароль</string>
    <string name="app_version">Версия приложения 1.1</string>
    <string name="contributors_label">Разработчики:</string>
    <string name="contr_prev_text">Студенты Воронежского Государственного Университета, Факультет Компьютерных Наук</string>
    <string name="contrib_names">- Змаев Даниил\n- Дмитрий Мамонов\n- Павел Смирнов</string>
</resources>