<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".view.operation.AddOperationFragment">

    <TextView
        android:id="@+id/operation_type_tv"
        style="@style/CardLabelTextMedium"
        android:layout_marginStart="@dimen/half_margin"
        android:textColor="@color/black"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/operation_type_label"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"/>
    <RadioGroup
        android:id="@+id/consumption_income_rg"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintTop_toBottomOf="@+id/operation_type_tv"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent">

        <RadioButton
            android:id="@+id/consumption_rb"
            style="@style/RadioButton"
            android:textColor="@color/white"
            android:textStyle="bold"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/consumption_text"
            android:background="@drawable/radiobutton_bg_selector"/>

        <RadioButton
            android:id="@+id/income_rb"
            style="@style/RadioButton"
            android:textColor="@color/white"
            android:textStyle="bold"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/income_text"
            android:background="@drawable/radiobutton_bg_selector" />

    </RadioGroup>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/score_til"
        style="@style/Widget.MaterialComponents.TextInputLayout.FilledBox.ExposedDropdownMenu"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/wallet_hint_text"
        app:boxStrokeWidth="0dp"
        app:layout_constraintTop_toBottomOf="@id/consumption_income_rg"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent">

        <AutoCompleteTextView
            android:id="@+id/filled_score"
            android:layout_width="match_parent"
            android:layout_height="60dp"
            style="@style/HintTextEt"
            android:background="@drawable/custom_input"
            android:drawableStart="@drawable/ic_wallet"
            android:padding="@dimen/half_margin"
            android:layout_marginHorizontal="@dimen/half_margin"
            android:inputType="none" />

    </com.google.android.material.textfield.TextInputLayout>

    <LinearLayout
        android:id="@+id/date_time_ll"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintTop_toBottomOf="@id/score_til"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent">

        <EditText
            android:id="@+id/time_et"
            style="@style/CardTextMedium"
            android:layout_width="wrap_content"
            android:layout_height="60dp"
            android:layout_margin="@dimen/half_margin"
            android:background="@drawable/custom_input"
            android:layout_weight="1"
            android:drawableStart="@drawable/ic_time"
            android:padding="@dimen/default_margin"
            android:inputType="time"
            android:gravity="center"
            android:hint="@string/time_hint_et"
            tools:text="12:30" />

        <EditText
            android:id="@+id/date_et"
            style="@style/CardTextMedium"
            android:layout_width="wrap_content"
            android:layout_height="60dp"
            android:padding="@dimen/default_margin"
            android:layout_margin="@dimen/half_margin"
            android:drawableStart="@drawable/ic_calendar"
            android:background="@drawable/custom_input"
            android:layout_weight="1"
            android:gravity="center"
            android:inputType="date"
            android:hint="@string/date_hint_et"
            tools:text="12:30" />

    </LinearLayout>

    <EditText
        android:id="@+id/sender_et"
        android:layout_width="match_parent"
        android:layout_height="60dp"
        style="@style/HintTextEt"
        android:background="@drawable/custom_input"
        android:layout_margin="@dimen/half_margin"
        android:padding="@dimen/default_margin"
        android:hint="@string/sender_hint_text"
        android:inputType="text"
        android:maxLength="10"
        android:drawableStart="@drawable/ic_person"
        app:layout_constraintTop_toBottomOf="@id/date_time_ll"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:importantForAutofill="no" />

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/category_til"
        style="@style/Widget.MaterialComponents.TextInputLayout.FilledBox.ExposedDropdownMenu"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/half_margin"
        android:hint="@string/category_hint_text"
        app:layout_constraintTop_toBottomOf="@id/sender_et"
        app:layout_constraintStart_toStartOf="parent"
        app:boxStrokeWidth="0dp"
        app:layout_constraintEnd_toEndOf="parent">

        <AutoCompleteTextView
            android:id="@+id/filled_category"
            style="@style/HintTextEt"
            android:layout_width="match_parent"
            android:layout_height="60dp"
            android:inputType="none"
            android:background="@drawable/custom_input"
            android:drawableStart="@drawable/ic_category_hint"
            android:padding="@dimen/half_margin" />

    </com.google.android.material.textfield.TextInputLayout>


    <EditText
        android:id="@+id/total_et"
        android:layout_width="match_parent"
        android:layout_height="60dp"
        style="@style/HintTextEt"
        android:background="@drawable/custom_input"
        android:layout_margin="@dimen/half_margin"
        android:padding="@dimen/default_margin"
        android:hint="@string/total_hint_text"
        android:inputType="numberDecimal"
        android:maxLength="12"
        android:drawableStart="@drawable/ic_rub"
        app:layout_constraintTop_toBottomOf="@id/category_til"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:importantForAutofill="no" />

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/operation_comment_til"
        android:layout_width="match_parent"
        android:layout_margin="@dimen/half_margin"
        android:layout_height="wrap_content"
        app:boxStrokeWidth="0dp"
        app:layout_constraintTop_toBottomOf="@id/total_et"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/comment_et"
            android:layout_width="match_parent"
            android:layout_height="60dp"
            style="@style/HintTextEt"
            android:background="@drawable/custom_input"
            android:inputType="textMultiLine"
            android:hint="@string/comment_hint_text"
            android:padding="@dimen/default_margin"
            android:drawableStart="@drawable/ic_comment"
            android:lines="1"
            android:gravity="top"
            android:maxLength="100"
            android:overScrollMode="always"
            android:scrollbars="vertical"
            android:scrollbarStyle="insideInset"
            android:scrollHorizontally="false" />

    </com.google.android.material.textfield.TextInputLayout>

    <Button
        android:id="@+id/addOperationButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:background="@drawable/rounded_corner"
        android:text="@string/add_operation_button_label"
        app:layout_constraintTop_toBottomOf="@id/operation_comment_til"
        android:layout_margin="@dimen/half_margin"
        app:layout_constraintEnd_toEndOf="parent"/>

</androidx.constraintlayout.widget.ConstraintLayout>