<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="@dimen/default_padding"
    tools:context=".view.auth.RecoveryFragment">

    <EditText
        android:id="@+id/email_et"
        android:layout_width="match_parent"
        android:layout_height="60dp"
        android:layout_margin="@dimen/half_margin"
        android:hint="@string/email_hint_text"
        style="@style/HintTextEt"
        android:background="@drawable/custom_input"
        android:drawablePadding="@dimen/half_margin"
        android:padding="16dp"
        android:drawableStart="@drawable/ic_email"
        android:inputType="textEmailAddress"
        android:maxLength="45"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <EditText
        android:id="@+id/secret_word_et"
        android:layout_width="match_parent"
        android:layout_height="60dp"
        android:layout_margin="@dimen/half_margin"
        android:hint="@string/secret_word_hint_text"
        style="@style/HintTextEt"
        android:background="@drawable/custom_input"
        android:drawablePadding="@dimen/half_margin"
        android:padding="16dp"
        android:drawableStart="@drawable/ic_pwd"
        android:maxLength="32"
        android:inputType="textPassword"
        app:layout_constraintTop_toBottomOf="@+id/email_et"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"/>

    <EditText
        android:id="@+id/password_et"
        android:layout_width="match_parent"
        android:layout_height="60dp"
        android:layout_margin="@dimen/half_margin"
        android:hint="@string/password_hint_text"
        style="@style/HintTextEt"
        android:background="@drawable/custom_input"
        android:drawablePadding="@dimen/half_margin"
        android:padding="16dp"
        android:drawableStart="@drawable/ic_password"
        android:inputType="textPassword"
        android:maxLength="32"
        app:layout_constraintTop_toBottomOf="@+id/secret_word_et"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"/>

    <EditText
        android:id="@+id/passwprd_again_et"
        android:layout_width="match_parent"
        android:layout_height="60dp"
        android:layout_margin="@dimen/half_margin"
        android:hint="@string/submit_password_hint_text"
        style="@style/HintTextEt"
        android:background="@drawable/custom_input"
        android:drawablePadding="@dimen/half_margin"
        android:padding="16dp"
        android:drawableStart="@drawable/ic_password"
        android:inputType="textPassword"
        android:maxLength="32"
        app:layout_constraintTop_toBottomOf="@+id/password_et"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"/>

    <com.github.leandroborgesferreira.loadingbutton.customViews.CircularProgressButton
        android:id="@+id/recoverButton"
        android:background="@drawable/rounded_corner"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/default_margin"
        android:textColor="@color/white"
        android:padding="@dimen/default_padding"
        android:layout_marginStart="@dimen/default_margin"
        android:text="@string/submit_button_label"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/passwprd_again_et" />


</androidx.constraintlayout.widget.ConstraintLayout>